--- a/pom.xml
+++ b/pom.xml
@@ -38,18 +38,18 @@
 		<dependency>
 			<groupId>net.stickycode.composite</groupId>
 			<artifactId>sticky-composite-logging-api</artifactId>
-			<version>1.3</version>
+			<version>[1,2)</version>
 		</dependency>
 		<dependency>
 			<groupId>net.stickycode.composite</groupId>
 			<artifactId>sticky-composite-unittest</artifactId>
-			<version>1.7</version>
+			<version>[1,2)</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>net.stickycode.composite</groupId>
 			<artifactId>sticky-composite-logging-deploy</artifactId>
-			<version>1.4</version>
+			<version>[1,2)</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
