--- a/pom.xml
+++ b/pom.xml
@@ -1,51 +1,50 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Copyright (c) 2011 RedEngine Ltd, http://www.redengine.co.nz. All rights reserved. -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	<parent>
-		<groupId>net.stickycode.parent</groupId>
-		<artifactId>sticky-parent-jar8</artifactId>
-		<version>1.3</version>
-	</parent>
-	<modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>net.stickycode.parent</groupId>
+    <artifactId>sticky-parent-jar8</artifactId>
+    <version>3.1</version>
+  </parent>
+  <modelVersion>4.0.0</modelVersion>
 
-	<groupId>net.stickycode.configuration</groupId>
-	<artifactId>sticky-configuration</artifactId>
-	<version>2.5-SNAPSHOT</version>
-	<packaging>jar</packaging>
+  <groupId>net.stickycode.configuration</groupId>
+  <artifactId>sticky-configuration</artifactId>
+  <version>2.5-SNAPSHOT</version>
+  <packaging>jar</packaging>
 
-	<name>sticky-configuration-2</name>
-	<description>Taking the configuration out of applications, using the same principles that underly dependency injection</description>
-	<inceptionYear>2008</inceptionYear>
-	<url>http://www.StickyCode.net/configured/sticky-configuration/</url>
+  <name>sticky-configuration-2</name>
+  <description>Taking the configuration out of applications, using the same principles that underly dependency injection</description>
+  <inceptionYear>2008</inceptionYear>
+  <url>http://www.StickyCode.net/configured/sticky-configuration/</url>
+  
+  <scm>
+    <developerConnection>${git.url}</developerConnection>
+    <tag>HEAD</tag>
+  </scm>
 
-	<scm>
-		<connection>scm:svn:http://stickycode.googlecode.com/svn/trunk/net.stickycode.configured/sticky-configuration</connection>
-		<developerConnection>scm:svn:https://stickycode.googlecode.com/svn/trunk/net.stickycode.configured/sticky-configuration</developerConnection>
-		<url>http://code.google.com/p/stickycode/source/browse/#svn/trunk/net.stickycode.configured/sticky-configuration</url>
-	</scm>
+  <dependencies>
+    <dependency>
+      <groupId>net.stickycode</groupId>
+      <artifactId>sticky-testutils</artifactId>
+      <version>[2.2,3)</version>
+      <scope>test</scope>
+    </dependency>
 
-	<dependencies>
-		<dependency>
-			<groupId>net.stickycode</groupId>
-			<artifactId>sticky-testutils</artifactId>
-			<version>[2.2,3)</version>
-			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>net.stickycode.configuration</groupId>
-			<artifactId>sticky-configuration-api</artifactId>
-			<version>[2.3,3)</version>
-		</dependency>
-		<dependency>
-			<groupId>net.stickycode.stereotype</groupId>
-			<artifactId>sticky-stereotype-component</artifactId>
-			<version>[3.1,4)</version>
-		</dependency>
-		<dependency>
-			<groupId>net.stickycode.composite</groupId>
-			<artifactId>sticky-composite-logging-api</artifactId>
-			<version>[3.2,4)</version>
-		</dependency>
-	</dependencies>
+    <dependency>
+      <groupId>net.stickycode.configuration</groupId>
+      <artifactId>sticky-configuration-api</artifactId>
+      <version>[2.3,3)</version>
+    </dependency>
+    <dependency>
+      <groupId>net.stickycode.stereotype</groupId>
+      <artifactId>sticky-stereotype-component</artifactId>
+      <version>[3.1,4)</version>
+    </dependency>
+    <dependency>
+      <groupId>net.stickycode.composite</groupId>
+      <artifactId>sticky-composite-logging-api</artifactId>
+      <version>[3.2,4)</version>
+    </dependency>
+  </dependencies>
 </project>
