--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
   <groupId>net.stickycode.configuration</groupId>
   <artifactId>sticky-configuration</artifactId>
-  <version>2.5</version>
+  <version>2.6-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>sticky-configuration-2</name>
@@ -20,7 +20,7 @@
   
   <scm>
     <developerConnection>${git.url}</developerConnection>
-    <tag>sticky-configuration-2.5</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <dependencies>
